<resources>
    <string name="app_name">Together</string>
    <string name="login">התחברות</string>
    <string name="email">מייל</string>
    <string name="password">סיסמא</string>
    <string name="register">הרשמה</string>
    <string name="click_to_login">לחץ להתחברות</string>
    <string name="click_to_register">לחץ כדי להירשם</string>
    <string name="logout">logout</string>
    <string name="first_name">שם פרטי</string>
    <string name="last_name">שם משפחה</string>
    <string name="phone_number">מספר טלפון</string>
    <string name="editing_products">עריכת מוצרים</string>
    <string name="distribution_center">עריכת נקודות חלוקה</string>
    <string name="order_summary">סיכום הזמנות</string>
    <string name="adding_products">הוספת מוצר חדש</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client">לקוח חדש</string>
    <string name="register_as">בחר פרופיל הרשמה</string>
    <string name="add_product">לחץ להוספת מוצר חדש</string>
    <string name="product_name">שם מוצר</string>
    <string name="description">תיאור מוצר</string>
    <string name="category">קטגוריה</string>
    <string name="quantity">כמות</string>
    <string name="price">מחיר</string>
    <string name="update_product">לחץ לעידכון מוצר קיים</string>
    <string name="SelectAddress">Select an Address</string>
    <string name="edit_profile">עריכת פרופיל</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Address">Address</string>
    <string name="username">username</string>
    <string name="forgot_password">שכחת את הסיסמא?</string>
    <string name="recover_password">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="save">save</string>
    <string name="choose_center">בחר נקודות חלוקה</string>
    <string name="description_distribution_center">בחר לאילו נקודות חלוקה תגיע השבוע\n ניתן לבחור עד מוצש בחצות</string>
    <string name="summary_centers">נקודות חלוקה אליהם אתה מגיע השבוע:</string>
    <string name="client_screen">Client Screen</string>
    <string name="profile">אזור אישי</string>
    <string name="client_cart">הסל שלי</string>
    <string name="seller">מוכר חדש</string>
    <string name="open_galery">הוסף תמונה</string>
    <string name="addProduct">הוסף מוצר</string>
    <string name="choose_update_product">בחירת מוצר לעריכה</string>
    <string name="update_single_product">עריכת מוצר</string>
    <string name="search">חיפוש</string>
    <string name="showingAll">הצג הכל</string>
    <string name="address">כתובת</string>
    <string name="product_title">שם מוצר</string>
    <string name="add_to_cart">הוספה לסל</string>
    <string name="confrim_order">אישור הזמנה</string>
    <string name="AddToCart">הוסף לסל</string>
    <string name="_10">₪10</string>
    <string name="MyCart">הסל שלי</string>
    <string name="number_order">הזמנה: 12354</string>
    <string name="order_date">10/12/18</string>
    <string name="shop_name">ABC Shop</string>
    <string name="order_final_amount">סכום סופי: 100₪</string>
    <string name="order_in_progress">בתהליך</string>
    <string name="OrderDetails">פרטי הזמנה</string>
    <string name="OrderID">מספר הזמנה</string>
    <string name="ProductTitle">כותרת מוצר</string>
    <string name="OrderStatus">מצב הזמנה</string>
    <string name="Items">מוצרים</string>
    <string name="Amount">כמות</string>
    <string name="OrderedItems">הפריטים שהוזמנו</string>
    <string name="Remove">הסרה</string>
    <string name="cost">סך הכל</string>
    <string name="chooseImage">בחר תמונה</string>
    <string name="addNewProductTitle">העלאת מוצר חדש</string>
    <string name="addNewProduct">הוספת מוצר</string>


</resources>