<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    android:layout_marginBottom="2dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/orderIdTv"
            android:text="@string/number_order"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/orderIdTv"
            android:text="@string/order_date"
            android:layout_toStartOf="@id/nextIv"/>

        <TextView
            android:id="@+id/shopNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/orderIdTv"
            android:text="@string/shop_name"/>

        <TextView
            android:id="@+id/amountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shopNameTv"
            android:text="@string/order_final_amount"/>

        <TextView
            android:id="@+id/statusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shopNameTv"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@id/nextIv"
            android:text="@string/order_in_progress"
            android:textColor="@color/green"/>

        <ImageView
            android:id="@id/nextIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next_grey"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            />



    </RelativeLayout>






</androidx.cardview.widget.CardView>