<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddProduct">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/addNewProduct"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/productIconIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_add_shopping_primary" />

        <Button
            android:id="@+id/btn_choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseImage"
            android:layout_below="@id/productIconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/write"
            android:drawablePadding="10dp"
            android:hint="@string/product_name"
            android:inputType="text"
            android:padding="10dp"
            android:layout_below="@+id/addImage"/>

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleEt"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/write"
            android:drawablePadding="10dp"
            android:hint="@string/description"
            android:inputType="textCapSentences|textImeMultiLine"
            android:padding="10dp" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionEt"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/baseline_arrow_drop_down_24"
            android:drawablePadding="10dp"
            android:hint="@string/category"
            android:inputType="textCapSentences|textImeMultiLine"
            android:padding="10dp" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/quantity"
            android:drawableStart="@drawable/ic_add_shopping_primary"
            android:drawablePadding="10dp"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:layout_below="@+id/category"
            />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/baseline_attach_money_24"
            android:drawablePadding="10dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_below="@+id/quantity"/>

        <Button
            android:id="@+id/btn_addproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Product"
            android:layout_marginTop="5dp"
            android:layout_below="@id/price" />

    </RelativeLayout>
</LinearLayout>
