<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seller">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="182dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/btn_editing_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editing_products"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="59dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/btn_distribution_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distribution_center"
            tools:layout_editor_absoluteX="141dp"
            tools:layout_editor_absoluteY="54dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/btn_order_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            tools:layout_editor_absoluteX="285dp"
            tools:layout_editor_absoluteY="130dp" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "0.5"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
