<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey00"
    android:padding="5dp">

    <TextView
        android:id="@+id/itemTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ProductTitle"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/itemPriceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemTitleTv"
        android:text="@string/_10"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemTitleTv"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/itemPriceEachTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_10"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/itemQuantityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="4dp"
            android:text="* 2"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/itemTitleTv"/>
    </LinearLayout>

    <TextView
        android:id="@+id/itemRemoveTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemTitleTv"
        android:layout_alignParentEnd="false"
        android:text="@string/Remove"
        android:textColor="@color/red"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/itemRemoveTv"
        android:background="@color/black"/>


</RelativeLayout>