<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MyCart"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/purple_200"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardItemRv"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:padding="5dp"
            tools:listitem="@layout/row_cartitem"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/priceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/sTotalTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/_10"
                android:textStyle="bold"
                android:layout_alignParentEnd="false"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/TotalLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="מחיר סופי"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"/>

         </RelativeLayout>

        <Button
            android:id="@+id/checkoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            android:padding="15dp"
            android:text="@string/confrim_order"
            android:textColor="@color/white"/>


    </LinearLayout>

</ScrollView>